Reactivamos la pirámide para ver si la coge

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     img.style.width = `${ancho * item.relativeWidth}px`;
                     img.style.height = `${alto * item.relativeHeight}px`;
 
-                    //document.body.appendChild(img);
+                    document.body.appendChild(img);
 
                     img.addEventListener('click', () => {
                         img.classList.toggle('seleccionado');
